gateway-api-demo-app.yaml
apiVersion: v1
kind: Service
metadata:
  name: k8s-gateway-api-demo-service
spec:
  ports:
  - port: 8080
    targetPort: 8080
  selector:
    app: k8s-gateway-api-demo-42e23d1
  type: LoadBalancer
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: k8s-gateway-api-demo-42e23d1
  name: k8s-gateway-api-demo-42e23d1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: k8s-gateway-api-demo-42e23d1
  template:
    metadata:
      labels:
        app: k8s-gateway-api-demo-42e23d1
    spec:
      containers:
      - env:
        - name: HOST_IP
          valueFrom:
            fieldRef:
              fieldPath: status.hostIP
        - name: POD_NAMESPACE
          valueFrom:
            fieldRef:
              fieldPath: metadata.namespace
        - name: POD_IP
          valueFrom:
            fieldRef:
              fieldPath: status.podIP
        - name: NODE_NAME
          valueFrom:
            fieldRef:
              fieldPath: spec.nodeName
        - name: POD_NAME
          valueFrom:
            fieldRef:
              fieldPath: metadata.name
        - name: POD_SERVICE_ACCOUNT
          valueFrom:
            fieldRef:
              fieldPath: spec.serviceAccountName
        image: msathetech/k8s-gateway-demo:42e23d1
        imagePullPolicy: Always
        livenessProbe:
          httpGet:
            path: /actuator/health/liveness
            port: 8080
          initialDelaySeconds: 2
          timeoutSeconds: 10
        name: k8s-gateway-api-demo
        readinessProbe:
          httpGet:
            path: /actuator/health/readiness
            port: 8080
          initialDelaySeconds: 2
          timeoutSeconds: 10
        resources:
          limits:
            cpu: "1"
            memory: 256Mi
          requests:
            cpu: "0.5"
