gateway-api-demo-http-route.yaml
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: HTTPRoute
metadata:
  name: k8s-gateway-api-demo
spec:
  parentRefs:
  - name: gateway
    namespace: istio-system
  rules:
  - backendRefs:
    - name: k8s-gateway-api-demo-service-6b67106
      port: 8080
      weight: 50
    - name: k8s-gateway-api-demo-service-6c279e8
      port: 8080
      weight: 50
    matches:
    - path:
        type: PathPrefix
        value: /
